
	* Bugfix: Fixed lost statements in sqlite3 backend if an error or a timeout occured
	* Bugfix: Fixed building dynamic firebird and mysql backend libraries on Windows platforms
	* Bugfix: Fixed pgsql backend support for timeouts in odbx_result() on Windows platforms
	* Bugfix: Fixed UTF-8 encoding of data in oracle backend on Windows platforms

2009-08-07 Norbert Sendetzky <norbert@linuxnetworks.de>

	* Feature: Added MySQL MinGW workaround for easy compilation of MySQL backend on Windows plattforms
	* Bugfix: Removed old config.{cpp,hpp} files from generating gettext files
	* Bugfix: Use sqlite3_prepare_v2() for improved error management in sqlite3 backend
	* Bugfix: Fixed singlelib builds for mysql and interbase on Win32
	* Bugfix: Fixed warning in firebird_odbx_error()

2009-06-02 Norbert Sendetzky <norbert@linuxnetworks.de>

	* Feature: Added pkgconfig file for OpenDBX C++ library
	* Change: Moved C++ doc generation to "doc/" subdirectory
	* Bugfix: Fixed configure to build MySQL backend on Windows plattforms
	* Bugfix: Fixed masked global errno variable in MySQL backend
	* Bugfix: Check for -lz which might be necessary for MySQL backend
	* Bugfix: Fixed configure to build Oracle backend on Windows plattforms
	* Bugfix: Fixed configure to build Sybase backend on Windows plattforms
	* Bugfix: Correctly check for ODBC library on Windows plattforms
	* Bugfix: Used unitialized variable in Win32 DLL loader (thanks to Markus Fritsche)
	* Bugfix: Rewritten Win32 DLL loader to prevent problem with SQLite (thanks to Mariano Martinez Peck)
	* Bugfix: Fixed warning in firebird backend when using newer Firebird libraries
	* Bugfix: Check for Interbase gds32 library if fbclient isn't found
	* Bugfix: Fixed compilation of odbxtest on MacOSX (thanks to Michael Atkisson)
	* Bugfix: Added OpenDBX C++ libary to spec file

2009-03-02 Norbert Sendetzky <norbert@linuxnetworks.de>

	* Feature: Use Doxygen for generating C++ API
	* Change: Fully documented C++ functions